2013-08-29 Added BUILD.BAT script for Windows by Jean-Marc Lienher. Thanks!
2013-05-24 Fixed a potential bug in the SYN/386 generator. Thanks, JM Lienher!
2013-05-21 Cleaned up the Windows code a bit (purely stylistic).
2013-05-18 Updated README, described Windows/MinGW port.
2013-05-18 Added FreeBSD voodoo section to 386 port. Thanks, Bakul Shah!
2013-05-17 Added Windows/386 support supplied by Jean-Marc Lienher. Thanks!
2013-02-28 Fix: fread() returned wrong length for partially filled buffers.
2013-02-27 Fix: setjmp()/longjmp() did not work properly.
2013-02-26 Fix: struct x { int *a, *b; }; generated int **b.
2013-02-21 Added a synthesizing back-end for the x86-64.
2013-02-19 Fix: *p+=n and *p-=n with int *p yielded wrong result.
2013-02-19 Fix: stdout was not line-buffered.
2013-02-18 Made printf %p output unsigned.
2013-02-18 Fixed wrong output of printf("%d", INT_MIN);
2013-02-18 Finished new code synthesizing back-end.
2013-02-13 Added pointer arithmetics test suite.
2013-02-03 Reversed this file.
2013-02-03 Fixed some typos, updated book link in README.
2012-12-03 Added the linux x86-64 crt0 module supplied by "minux". Thanks!
2012-05-14 Made the compiler clean up *.o files after linking.
2012-05-14 Added -vvv option (also lists remove commands).
2012-05-14 Fix: reporting non-existent source files without .[sc] suffix.
2012-05-07 Fix: middle argument of ?: is an expr (not a logic op).
2012-04-27 Renamed syscall.h to unistd.h for portability.
2012-04-26 Removed all GNU libc dependencies from Linux crt0.
2012-04-25 Added the Linux/386 crt0 module (crt0-linux-386.s).
2012-04-18 Added a configure script.
2012-04-18 Moved machine word size to target description.
2012-04-17 Added the FreeBSD/x86-64 crt0 module (crt0-freebsd-x86-64.s).
2012-04-17 Improved some error messages.
2012-04-16 Fixed an off-by-one error in getenv().
2012-04-15 Re-organized archive to support multiple targets.
2012-04-15 Experimental NetBSD/x86 support completed.